<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="Filter"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/no_filter"
                android:title="No filter" />
            <item
                android:id="@+id/filter_on_date"
                android:title="choose a date" />
            <item
                android:id="@+id/filter_on_place_Peach"
                android:title="place: Peach" />
            <item
                android:id="@+id/filter_on_place_Room2"
                android:title="place: Room2" />
            <item
                android:id="@+id/filter_on_place_Room3"
                android:title="place: Room3" />
            <item
                android:id="@+id/filter_on_place_Kiwi"
                android:title="place: Kiwi" />
            <item
                android:id="@+id/filter_on_place_Berry"
                android:title="place: Berry" />
            <item
                android:id="@+id/filter_on_place_Cherry"
                android:title="place: Cherry" />
            <item
                android:id="@+id/filter_on_place_Room7"
                android:title="place: Room7" />
            <item
                android:id="@+id/filter_on_place_Room8"
                android:title="place: Room8" />
            <item
                android:id="@+id/filter_on_place_Grape"
                android:title="place: Grape" />
            <item
                android:id="@+id/filter_on_place_Room10"
                android:title="place: Room10" />
        </menu>
    </item>
</menu>